# plex-real-tv

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: build-desktop.yml
docs/: PORTABLE-APP-PLAN.md  PORTABLE-APP.md
scripts/: batch_download_commercials.py  demo_config.py  server_download_commercials.py  server_download_nostalgia.py
scripts/portable/: build.py  create_ico.py  hook-fastapi.py  rtv-desktop.spec
src/rtv/: __init__.py  cli.py  commercial.py  config.py  display.py  matcher.py  playlist.py  plex_client.py  remote.py
src/rtv/desktop/: __init__.py  app.py  server.py
src/rtv/desktop/static/: fonts.css
src/rtv/desktop/templates/: base.html  playlists.html  shows.html
src/rtv/tui/: app.py  styles.tcss
src/rtv/tui/screens/: dashboard.py  generate.py  playlists.py  shows.py
src/rtv/web/: app.py
src/rtv/web/routes/: generate.py  playlists.py  setup.py  shows.py
src/rtv/web/static/: app.css
src/rtv/web/templates/: base.html  generate.html  home.html  playlist_detail.html  playlists.html  setup.html  shows.html
tests/: test_commercial.py  test_config.py  test_matcher.py  test_playlist.py  test_tui.py  test_web.py
